# AGENTTRACE

./: .env.example  .gitignore  README.md  pyproject.toml
runs/gaia_full/: gaia_report.json  trace_comparison.json
runs/paper_like/: report.json  report_llm_50.json
runs/smoke/: report.json
src/agenttrace_repro/: baselines.py  cli.py  config.py  evaluation.py  generator.py  graph.py  llm_baseline.py  models.py  ranker.py  trail_gaia.py
