[project]
name = "agenttrace-repro"
version = "0.1.0"
description = "Synthetic reproduction of the AgentTrace paper with benchmark generation and graph-based root cause analysis."
readme = "README.md"
authors = [
    { name = "liningshuai", email = "3053472115@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.3",
    "huggingface-hub>=1.7.2",
]

[project.scripts]
agenttrace-repro = "agenttrace_repro:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
